Added security to three methods
