# service/api/add-like.go
@@ -1,8 +1,10 @@
 package api
 
 import (
+	"fmt"
 	"net/http"
 	"strconv"
+	"strings"
 
 	"github.com/gabrimatx/WasaPhoto/service/api/reqcontext"
 	"github.com/julienschmidt/httprouter"
@@ -11,6 +13,12 @@ import (
 func (rt *_router) likePhoto(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
 	if r.Method != http.MethodPut {
 		http.Error(w, "Method not allowed", http.StatusMethodNotAllowed)
+		return
+	}
+
+	authHeader := r.Header.Get("Authorization")
+	if authHeader == "" {
+		http.Error(w, "Unauthorized", http.StatusUnauthorized)
 		return
 	}
 
@@ -24,6 +32,19 @@ func (rt *_router) likePhoto(w http.ResponseWriter, r *http.Request, ps httprout
 	if err != nil {
 		w.WriteHeader(http.StatusBadRequest)
 		return
+	}
+
+	authParts := strings.Fields(authHeader)
+	if len(authParts) != 2 || authParts[0] != "Bearer" {
+		http.Error(w, "Invalid token format", http.StatusUnauthorized)
+		return
+	}
+
+	token := authParts[1]
+	if token == fmt.Sprint(userId) {
+		fmt.Fprint(w, "Access granted!")
+	} else {
+		http.Error(w, "Invalid token", http.StatusUnauthorized)
 	}
 
 	err = rt.db.LikePhoto(photoId, userId)
